--- a/quizServices/src/main/resources/application.properties
+++ b/quizServices/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.application.name=quiz-services
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/quizService
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password = 
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+
+server.port = 8080
