added api gateway and complete testing

--- a/serviceRegistration/src/main/resources/application.properties
+++ b/serviceRegistration/src/main/resources/application.properties
@@ -9,6 +9,6 @@ eureka.client.register-with-eureka = false
 #eureka server does not need to fetch registry for itself
 eureka.client.fetch-registry = false
 
-#need to write the default port explicity
+#need to write the default port explicitly
 #otherwise give the specification or property in eureka clients about the server port change from default(8761) to some other
 server.port = 8761
